--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#tienda">Nuestra Tienda</a></li>
             <li><a href="#servicios">Servicios</a></li>
             <li><a href="#contacto">Contáctenos</a></li>
-            <li><a href="#cotizacion">Solicitud de Cotización</a></li>
+            <li><a href="cotizacion.php">Solicitud de Cotización</a></li>
             <li><a href="#cuento">Diseña tu cuento</a></li>
         </ul>
     </nav>
